# htw-mp-gpu-computing

./: .bazelrc  .gitignore  Makefile  Readme.md  WORKSPACE
.github/workflows/: workflow.yml
_exercises/ex1/: CMakeLists.txt  ex1.c
_exercises/ex2/: ex2_1a.cu  ex2_1b.cu  ex2_2_pat.cu
_exercises/ex3/: ex3_1_pat.cu  ex3_3.cu
ex1/: Readme.md  ex1.c
ex2/: Makefile  Readme.md  ex2_1a.cu  ex2_1b.cu  ex2_2.cu  ex2_3.cu  ex2_3_pat.cu
ex3/: Makefile  Readme.md  ex3_1.cu  ex3_2.c  ex3_2_pat.cpp  ex3_3_pat.cu
ex3/ex3_1/: CMakeLists.txt  readme.md
ex3/ex3_2/: CMakeLists.txt  readme.md
ex3/ex3_3/: CMakeLists.txt  readme.md
ex3/ex3_4/: readme.md
lib/img/: BUILD  operations.c  operations.h  types.h
lib/matrix/: BUILD  helper.c  helper.h
lib/sobel/: BUILD  sobel.h  sobel_cuda.cu  sobel_cuda.cuh  sobel_omp.c  sobel_seq.c
main/: BUILD  main.c
project/sobel_c/: Makefile  img.c  img.h  mat_helper.c  mat_helper.h  sobel.c
testdata/: fug.ppm  img_-1.ppm  img_-2.ppm
